--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.theoptionsgeek.cloud_clipboard">
+    package="com.theoptionsgeek.stock_portfolio">
    <application
         android:label="${appName}"
         android:name="${applicationName}"
