--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
-project(cloud_clipboard LANGUAGES CXX)
+project(stock_portfolio LANGUAGES CXX)
 
-set(BINARY_NAME "cloud_clipboard")
+set(BINARY_NAME "stock_portfolio")
 
 cmake_policy(SET CMP0063 NEW)
 
