--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ google-services.json
 .classpath
 .project
 .settings/
-.vscode/*
+.vscode/
 
 # packages file containing multi-root paths
 .packages.generated
