Add Position entity model

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
 
 dev_dependencies:
   bloc_test: ^9.1.4
+  build_runner: ^2.4.8
   firebase_auth_platform_interface: ^7.0.5
   firebase_core_platform_interface: ^5.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.3.1
   mocktail: ^1.0.0
   very_good_analysis: ^5.1.0
 
