--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   intl: ^0.18.0
   json_annotation: ^4.8.1
   meta: ^1.10.0
+  multi_select_flutter: ^4.1.3
   rxdart: ^0.27.7
   shared_preferences: ^2.2.2
   super_clipboard: ^0.8.4
